Fix Smol Yuri's size on mobile

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -67,7 +67,7 @@ body > nav {
     }
 
     #SmolYuriImg {
-        height: 32px;
+        height: 100%;
     }
 }
 
